[package]
name = "chaos-testing"
version = "0.1.0"
edition = "2024"

[lib]
name = "chaos_testing"
path = "src/lib.rs"

[[bin]]
name = "chaos-testing"
path = "src/main.rs"

[[example]]
name = "parser-demo"
path = "examples/parser-demo.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive", "cargo"] }
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["tokio", "server"] }
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlparser = "0.59.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
